<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeaconScanner</string>
    <string name="app_full_name">BeaconScanner</string>
    <string name="application_path">BeaconScanner</string>
    <string name="action_settings">Settings</string>
    <string name="app_about">"BeaconScanner"</string>
    <string name="btn_start_sceen">Start Scan</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="text_visible_iBeacon">Visible Beacons</string>
    <string name="no_files_for_iBeacon">No files for selected iBeacon!</string>
    <string name="warning">Warning</string>
    <string name="app_header">i</string>
    <string name="title_activity_all_files_beacon">AllFilesBeaconActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_files">Files for</string>
    <string name="serial_number_label">Serial Number(SN)</string>
    <string name="service_number_label">Service Number(ServN)</string>
    <string name="manu_label">Manu(PL)</string>
    <string name="date_manu_label">DateManuf(LT)</string>
    <string name="product_number_label">Product Number(PN)</string>
    <string name="blank_serial_number">Serial Number cannot be blank</string>
    <string name="pick_date">&#8230;</string>
    <string name="name_beacon">Name of beacon</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="export">Export</string>
    <string name="title_activity_telephone">TelephoneActivity</string>
    <string name="abb_decrc_demo">BeaconScanner</string>
    <string name="send_email">Send Email</string>
    <string name="call_number">Call</string>
    <string name="change_back_mode">Change back mode</string>

</resources>