<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_export_action"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/export"/>
    <item
        android:id="@+id/action_about_action"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/change_state_of_background_mode"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/change_back_mode"/>
    <item
        android:id="@+id/action_exit_action"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>