<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startscreen"
    tools:context=".StartActivity" >

    <ImageView
        android:id="@+id/start_background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:contentDescription="@string/app_name"
        android:src="@drawable/startscreen" >
    </ImageView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:gravity="center_horizontal"
        android:text="@string/abb_decrc_demo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:gravity="center_horizontal"
        android:text="@string/app_full_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50dp"
        android:textStyle="bold" />

</RelativeLayout>